# lab_01

./: CMakeLists.txt  README.md  students.json
demo/: main.cpp
include/: source.hpp  student.hpp
sources/: source.cpp  student.cpp
tests/: test.cpp
